some tweaks I don't feel like doing again

--- a/about.html
+++ b/about.html
@@ -11,11 +11,25 @@
     <body>
         <div class="who-i-am">
             <h4>
-                This is the about page
+                ABOUT
             </h4>
             <p>
-
+                What I've been up to:
             </p>
+            <ul>
+                <li>
+                    Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
+                </li>
+                <li>
+
+                </li>
+                <li>
+                    Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
+                </li>
+                <li>
+                    
+                </li>
+            </ul>
         </div>
     </body>
 </html>
