--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="job-summary">
                 <p>
-                    Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and the basics of Javascript.  
+                    Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript.  
                 </p>
                 <p>
                     Please feel free to look through my website
