--- a/hireme.html
+++ b/hireme.html
@@ -5,16 +5,21 @@
         <title>Justin Lattimore</title>
         <meta name="viewport" content="width=device-width, intital-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/hireme.css">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
     <body>
         <div class="who-i-am">
-            <h4>
-                Going to be the hire me page.
-            </h4>
+            <img src="assets/portrait.jpg"></img>
+            <h1>
+                Need a dev?
+            </h1>
             <p>
-                
+                I'm an aspiring web dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
+            </p>
+            <p>
+
             </p>
         </div>
     </body>
