added modularity to rightPanel of page

--- a/about.html
+++ b/about.html
@@ -9,27 +9,35 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
     <body>
-        <div class="who-i-am">
-            <h4>
-                ABOUT
-            </h4>
-            <p>
-                What I've been up to:
-            </p>
-            <ul>
-                <li>
-                    Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
-                </li>
-                <li>
+        <section id="main-body">
+            <span class="ion-navicon-round"></span>
+            <div class="who-i-am">
+                <h4>
+                    ABOUT
+                </h4>
+                <p>
+                    What I've been up to:
+                </p>
+                <ul>
+                    <li>
+                        Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
+                    </li>
+                    <li>
 
-                </li>
-                <li>
-                    Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
-                </li>
-                <li>
-                    
-                </li>
-            </ul>
-        </div>
+                    </li>
+                    <li>
+                        Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
+                    </li>
+                    <li>
+                        
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="more-info">
+            <!-- Javascript handled in 'main.js' -->
+        </section>
+        <script src="scripts/main.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     </body>
 </html>
