--- a/hireme.html
+++ b/hireme.html
@@ -10,17 +10,25 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
     <body>
-        <div class="who-i-am">
-            <img src="assets/portrait.jpg"></img>
-            <h1>
-                Need a dev?
-            </h1>
-            <p>
-                I'm an aspiring web dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
-            </p>
-            <p>
+        <section id="main-body">
+            <span class="ion-navicon-round"></span>
+            <div class="who-i-am">
+                <img src="assets/portrait.jpg"></img>
+                <h1>
+                    Need a dev?
+                </h1>
+                <p>
+                    I'm an aspiring web dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
+                </p>
+                <p>
 
-            </p>
-        </div>
+                </p>
+            </div>
+        </section>
+        <section id="more-info">
+            <!-- Javascript handled in 'main.js' -->
+        </section>
+        <script src="scripts/main.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     </body>
 </html>
