--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span class="ion-navicon-round"></span>
             <div class="job-title">
                 <img src="assets/justin-logo.png">
-                <h1>Web Developer</h1>
+                <h1>Front End Developer</h1>
                 <h2>Justin Lattimore</h2>
             </div>
             <div class="job-summary">
@@ -24,7 +24,7 @@
                     Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript.  
                 </p>
                 <p>
-                    Please feel free to look through my website
+                    Please feel free to look through my website.
                 </p>
             </div>
             <div class="link-logos">
@@ -55,20 +55,7 @@
             </div>
         </section>
         <section id="more-info">
-            <div class="option-list">
-                <a href="index.html"><p>Home</p>
-                <a href="about.html"><p>About</p></a>
-                <p>Projects</p>
-                <a href="https://sites.google.com/site/jlattimor3/concept-art/motion-graphics-and-design" target="_blank"><p>Graphics</p></a>
-                <a href="hireme.html"><p>Hire Me</p></a>
-            </div>
-            <div class="options-bottom">
-                <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank"><p>LinkedIn</p></a>
-                <a href="https://github.com/Wyzardsleeves" target="_blank"><p>Github</p></a>
-                <a href="https://www.instagram.com/justinlattimore/" target="_blank"><p>Instagram</p></a>
-                <a href="http://codepen.io/Wyzardsleeves/" target="_blank"><p>CodePen</p></a>
-                <a href="http://jlattimoreweb.blogspot.com/" target="_blank"><p>Blog</p></a>
-            </div>
+            <!-- Javascript handled in 'main.js' -->
         </section>
         <script src="scripts/main.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
