almost forgot to add projects.html

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
         <title>Justin Lattimore</title>
         <meta name="viewport" content="width=device-width, intital-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/hireme.css">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
@@ -12,26 +13,7 @@
         <section id="main-body">
             <span class="ion-navicon-round"></span>
             <div class="who-i-am">
-                <h4>
-                    ABOUT
-                </h4>
-                <p>
-                    What I've been up to:
-                </p>
-                <ul>
-                    <li>
-                        Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
-                    </li>
-                    <li>
-                        Blogging activity via <a href="http://jlattimoreweb.blogspot.com/">Blogspot</a>.
-                    </li>
-                    <li>
-                        Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
-                    </li>
-                    <li>
-                        
-                    </li>
-                </ul>
+                <p>Projects that I have worked on!</p>
             </div>
         </section>
         <section id="more-info">
