--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,11 @@
             <div class="who-i-am">
                 <p>Projects that I have worked on!</p>
             </div>
+            <div class="project-list">
+              <ul class="project">
+                <li>Projects will go in here</li>
+              </ul>
+            </div>
         </section>
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
