--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <title>Justin Lattimore</title>
         <meta name="viewport" content="width=device-width, intital-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/about.css">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
@@ -29,7 +30,7 @@
                         Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
                     </li>
                     <li>
-                        
+
                     </li>
                 </ul>
             </div>
