fixed about and hireme page

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
     </head>
     <body>
+      <!--
         <aside class="image-stuff">
             <img src="assets/justin-alt.jpg">
         </aside>
+      -->
         <section id="main-body">
             <span class="ion-navicon-round"></span>
             <div class="job-title">
-                <img src="assets/justin-logo.png">
+                <img src="assets/justin-close-alt.jpg">
                 <h1>Front End Developer</h1>
                 <h2>Justin Lattimore</h2>
             </div>
             <div class="job-summary">
                 <p>
-                    Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript.
+                    Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript. I've also been trained with Ruby on Rails.
                 </p>
                 <p>
                     Please feel free to look through my website.
