--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,14 @@
         <section id="main-body">
             <span class="ion-navicon-round"></span>
             <div class="project-summary">
-                <p>Projects that I have worked on!</p>
+              <div class="project-title">
+                <h2>Projects that I have worked on!</h2>
+              </div>
+              <div class="project-description">
+                <h5>
+                  My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+                </h5>
+              </div>
             </div>
             <div class="project-list">
               <!-- This is going to be moved to js -->
