fixed hireme page again

--- a/hireme.html
+++ b/hireme.html
@@ -21,8 +21,9 @@
                     I'm an aspiring web dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
                 </p>
                 <p>
-
+                  <a href="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/edit?usp=sharing">Resume</a>
                 </p>
+                <iframe src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
             </div>
         </section>
         <section id="more-info">
