--- a/hireme.html
+++ b/hireme.html
@@ -13,18 +13,27 @@
         <section id="main-body">
             <span class="ion-navicon-round"></span>
             <div class="who-i-am">
+              <div class="portrait-info">
                 <img src="assets/portrait.jpg"></img>
-                <h1>
-                    Need a dev?
-                </h1>
+                <h3>Justin Lattimore</h3>
+                <h3>Front End Developer</h3>
+              </div>
+              <div class="hireme-main">
+                <h3>
+                  Got Dev?
+                </h3>
                 <p>
-                    I'm an aspiring web dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
+                  I'm an aspiring Front End Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
                 </p>
                 <p>
-                  <a href="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/edit?usp=sharing">Resume</a>
+                  I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to jlattimoreweb.com to discuss it further?
                 </p>
-                <iframe src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
-            </div>
+              </div>
+              <p>
+                <a href="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/edit?usp=sharing">Resume</a>
+              </p>
+              <iframe src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+          </div>
         </section>
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
