icon test for github pages

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
             </div>
             <div class="link-logos">
                 <a href="https://wyzardsleeves.github.io/" target="_blank">
-                    <span class="ion-earth"></span>
+                    <i class="ion-earth"></i>
                     <p>Other Site</p>
                 </a>
                 <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
-                    <span class="ion-social-linkedin-outline"></span>
+                    <i class="ion-social-linkedin-outline"></i>
                     <p>LinkedIn</p>
                 </a>
                 <a href="https://github.com/Wyzardsleeves" target="_blank">
-                    <span class="ion-social-github"></span>
+                    <i class="ion-social-github"></i>
                     <p>Github</p>
                 </a>
                 <a href="https://www.instagram.com/justinlattimore/" target="_blank">
-                    <span class="ion-social-instagram-outline"></span>
+                    <i class="ion-social-instagram-outline"></i>
                     <p>Instagram</p>
                 </a>
                 <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
-                    <span class="ion-social-codepen-outline"></span>
+                    <i class="ion-social-codepen-outline"></i>
                     <p>CodePen</p>
                 </a>
                 <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
-                    <span class="ion-android-person"></span>
+                    <i class="ion-android-person"></i>
                     <p>Blog</p>
                 </a>
             </div>
