set up demo reel vid

--- a/graphics.html
+++ b/graphics.html
@@ -1,2 +1,26 @@
+<!DOCTYPE html>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sUuJhe3MXjc" frameborder="0" allowfullscreen></iframe>
+<html>
+  <head>
+      <title>Justin Lattimore</title>
+      <meta name="viewport" content="width=device-width, intital-scale=1">
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/graphics.css">
+      <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
+  </head>
+  <body>
+    <section id="main-body">
+        <span class="ion-navicon-round"></span>
+        <div class="vid">
+          <iframe src="https://www.youtube.com/embed/sUuJhe3MXjc" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section id="more-info">
+        <!-- Javascript handled in 'main.js' -->
+    </section>
+    <script src="scripts/main.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+
+  </body>
+</html>
