improved hireme (fixed resume)

--- a/about.html
+++ b/about.html
@@ -21,16 +21,16 @@
                 </p>
                 <ul>
                     <li>
-                        Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
+                      Participating in <a href="http://www.charlottejuniordevs.com/">Charlotte Junior Devs</a> hackathons.
                     </li>
                     <li>
-                        Blogging activity via <a href="http://jlattimoreweb.blogspot.com/">Blogspot</a>.
+                      Blogging activity via <a href="http://jlattimoreweb.blogspot.com/">Blogspot</a>.
                     </li>
                     <li>
-                        Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
+                      Personal <a href="https://github.com/Wyzardsleeves/auto-hunt-raw">automobile finding</a> project.
                     </li>
                     <li>
-
+                      Making a mobile version of this very site your'e looking at
                     </li>
                 </ul>
             </div>
