--- a/graphics.html
+++ b/graphics.html
@@ -12,6 +12,9 @@
   <body>
     <section id="main-body">
         <span class="ion-navicon-round"></span>
+        <div class="graphics-heading">
+          <h2>Motion Graphics</div>
+        </div>
         <div class="vid">
           <iframe src="https://www.youtube.com/embed/sUuJhe3MXjc" frameborder="0" allowfullscreen></iframe>
         </div>
@@ -21,6 +24,5 @@
     </section>
     <script src="scripts/main.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-
   </body>
 </html>
