--- a/hireme.html
+++ b/hireme.html
@@ -29,10 +29,14 @@
                   I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to jlattimoreweb.com to discuss it further?
                 </p>
               </div>
+              <!--
               <p>
                 <a href="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/edit?usp=sharing">Resume</a>
               </p>
-              <iframe src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+              -->
+              <div>
+                <iframe class="resume" width="850" height="1300" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+              </div>
           </div>
         </section>
         <section id="more-info">
