--- a/projects.html
+++ b/projects.html
@@ -14,11 +14,14 @@
             <span class="ion-navicon-round"></span>
             <div class="project-summary">
               <div class="project-title">
-                <h2>Projects that I have worked on!</h2>
+                <h2>Projects</h2>
               </div>
               <div class="project-description">
                 <h5>
                   My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+                </h5>
+                <h5>
+
                 </h5>
               </div>
             </div>
