--- a/projects.html
+++ b/projects.html
@@ -11,26 +11,26 @@
     </head>
     <body>
         <section id="main-body">
-            <span class="ion-navicon-round"></span>
-            <div class="project-summary">
-              <div class="project-title">
-                <h2>Projects</h2>
-              </div>
-              <div class="project-description">
-                <h5>
-                  My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
-                </h5>
-                <h5>
-
-                </h5>
-              </div>
+          <span class="ion-navicon-round"></span>
+          <div class="project-summary">
+            <div class="project-title">
+              <h2>Projects</h2>
             </div>
-            <div class="project-list">
-              <!-- This is going to be moved to js -->
+            <div class="project-description">
+              <h5>
+                My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+              </h5>
+              <h5>
+                I look forward to learning new technologies!
+              </h5>
             </div>
+          </div>
+          <div class="project-list">
+            <!-- Javascript handled in 'main.js' -->
+          </div>
         </section>
         <section id="more-info">
-            <!-- Javascript handled in 'main.js' -->
+          <!-- Javascript handled in 'main.js' -->
         </section>
         <script src="scripts/project_fixtures.js"></script>
         <script src="scripts/main.js"></script>
