altered index page and added Blocipedia

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="ion-navicon-round"></span>
             <div class="job-title">
                 <img src="assets/justin-close-alt.jpg">
-                <h1>Front End Developer</h1>
+                <h1>Web Developer</h1>
                 <h2>Justin Lattimore</h2>
             </div>
             <div class="job-summary">
