--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,11 @@
     <head>
         <title>Justin Lattimore</title>
         <meta name="viewport" content="width=device-width, intital-scale=1">
+        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/projects.css">
-        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
     </head>
     <body>
         <section id="main-body">
