--- a/hireme.html
+++ b/hireme.html
@@ -26,16 +26,11 @@
                   I'm an aspiring Front End Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
                 </p>
                 <p>
-                  I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to jlattimoreweb.com to discuss it further?
+                  I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to jlattimoreweb@gmail.com to discuss it further?
                 </p>
               </div>
-              <!--
-              <p>
-                <a href="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/edit?usp=sharing">Resume</a>
-              </p>
-              -->
               <div>
-                <iframe class="resume" width="850" height="1300" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+                <iframe class="resume" width="850" height="1350" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
               </div>
           </div>
         </section>
