--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <html>
     <head>
-        <title>Justin Lattimore</title>
-        <meta name="viewport" content="width=device-width, intital-scale=1">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-        <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
+      <title>Justin Lattimore</title>
+      <meta name="viewport" content="width=device-width, intital-scale=1">
+      <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/projects.css">
     </head>
     <body>
       <!--
@@ -15,7 +16,7 @@
             <img src="assets/justin-alt.jpg">
         </aside>
       -->
-        <section id="main-body">
+        <section id="about-body">
             <span class="ion-navicon-round"></span>
             <div class="job-title">
                 <img src="assets/justin-close-alt.jpg">
@@ -31,37 +32,57 @@
                 </p>
             </div>
             <div class="link-logos">
-                <a href="https://wyzardsleeves.github.io/" target="_blank">
-                    <i class="ion-earth"></i>
-                    <p>Other Site</p>
-                </a>
-                <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
-                    <i class="ion-social-linkedin-outline"></i>
-                    <p>LinkedIn</p>
-                </a>
-                <a href="https://github.com/Wyzardsleeves" target="_blank">
-                    <i class="ion-social-github"></i>
-                    <p>Github</p>
-                </a>
-                <a href="https://www.instagram.com/justinlattimore/" target="_blank">
-                    <i class="ion-social-instagram-outline"></i>
-                    <p>Instagram</p>
-                </a>
-                <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
-                    <i class="ion-social-codepen-outline"></i>
-                    <p>CodePen</p>
-                </a>
-                <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
-                    <i class="ion-android-person"></i>
-                    <p>Blog</p>
-                </a>
+              <!--
+              <a href="https://wyzardsleeves.github.io/" target="_blank">
+                  <i class="ion-earth"></i>
+                  <p>Other Site</p>
+              </a>
+              -->
+              <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
+                  <i class="ion-social-linkedin-outline"></i>
+                  <p>LinkedIn</p>
+              </a>
+              <a href="https://github.com/Wyzardsleeves" target="_blank">
+                  <i class="ion-social-github"></i>
+                  <p>Github</p>
+              </a>
+              <a href="https://www.instagram.com/justinlattimore/" target="_blank">
+                  <i class="ion-social-instagram-outline"></i>
+                  <p>Instagram</p>
+              </a>
+              <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
+                  <i class="ion-social-codepen-outline"></i>
+                  <p>CodePen</p>
+              </a>
+              <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
+                  <i class="ion-android-person"></i>
+                  <p>Blog</p>
+              </a>
             </div>
+        </section>
+        <section id="project-body">
+          <div class="project-summary">
+            <div class="project-title">
+              <h2>Projects</h2>
+            </div>
+            <div class="project-description">
+              <h5>
+                My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+              </h5>
+              <h5>
+                I look forward to learning new technologies!
+              </h5>
+            </div>
+          </div>
+          <div class="project-list">
+            <!-- Javascript handled in 'main.js' -->
+          </div>
         </section>
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
         </section>
+        <script src="scripts/project_fixtures.js"></script>
         <script src="scripts/main.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     </body>
 </html>
