--- a/graphics.html
+++ b/graphics.html
@@ -6,11 +6,12 @@
       <meta name="viewport" content="width=device-width, intital-scale=1">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/graphics.css">
+      <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
   </head>
   <body>
-    <section id="main-body">
+    <section id="about-body">
         <span class="ion-navicon-round"></span>
         <div class="graphics-heading">
           <h2>Motion Graphics</div>
