--- a/hireme.html
+++ b/hireme.html
@@ -6,17 +6,18 @@
         <meta name="viewport" content="width=device-width, intital-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/hireme.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
     </head>
     <body>
-        <section id="main-body">
+        <section id="about-body">
             <span class="ion-navicon-round"></span>
             <div class="who-i-am">
               <div class="portrait-info">
                 <img src="assets/portrait.jpg"></img>
                 <h3>Justin Lattimore</h3>
-                <h3>Front End Developer</h3>
+                <h3>Web Developer</h3>
               </div>
               <div class="hireme-main">
                 <h3>
