--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="styles/projects.css">
     </head>
     <body>
-        <section id="main-body">
+        <section id="about-body">
           <span class="ion-navicon-round"></span>
           <div class="project-summary">
             <div class="project-title">
