further modularized other pages

--- a/graphics.html
+++ b/graphics.html
@@ -13,6 +13,11 @@
   <body>
     <section id="about-body">
         <span class="ion-navicon-round"></span>
+        <div class="portrait-info">
+          <img src="assets/portrait.jpg"></img>
+          <h3>Justin Lattimore</h3>
+          <h3>Web Developer</h3>
+        </div>
         <div class="graphics-heading">
           <h2>Motion Graphics</div>
         </div>
