--- a/hireme.html
+++ b/hireme.html
@@ -24,10 +24,10 @@
                   Got Dev?
                 </h3>
                 <p>
-                  I'm an aspiring Front End Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
+                  I'm an aspiring Web Dev excited to get into the industry. I can relocate anywhere. Since I'm so serious about becoming a developer I've saved plenty to move and have no obligations preventing me from doing so.
                 </p>
                 <p>
-                  I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to jlattimoreweb@gmail.com to discuss it further?
+                  I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to <a href="mailto:jlattimoreweb@gmail.com">jlattimoreweb@gmail.com</a> to discuss it further?
                 </p>
               </div>
               <div>
@@ -38,6 +38,7 @@
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
         </section>
+        <script src="scripts/project_fixtures.js"></script>
         <script src="scripts/main.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     </body>
