--- a/index.html
+++ b/index.html
@@ -37,26 +37,36 @@
                   <p>Other Site</p>
               </a>
               -->
-              <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
-                  <i class="ion-social-linkedin-outline"></i>
-                  <p>LinkedIn</p>
-              </a>
-              <a href="https://github.com/Wyzardsleeves" target="_blank">
-                  <i class="ion-social-github"></i>
-                  <p>Github</p>
-              </a>
-              <a href="https://www.instagram.com/justinlattimore/" target="_blank">
-                  <i class="ion-social-instagram-outline"></i>
-                  <p>Instagram</p>
-              </a>
-              <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
-                  <i class="ion-social-codepen-outline"></i>
-                  <p>CodePen</p>
-              </a>
-              <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
-                  <i class="ion-android-person"></i>
-                  <p>Blog</p>
-              </a>
+              <div class="link-block">
+                <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
+                    <i class="ion-social-linkedin-outline"></i>
+                    <p>LinkedIn</p>
+                </a>
+              </div>
+              <div class="link-block">
+                <a href="https://github.com/Wyzardsleeves" target="_blank">
+                    <i class="ion-social-github"></i>
+                    <p>Github</p>
+                </a>
+              </div>
+              <div class="link-block">
+                <a href="https://www.instagram.com/justinlattimore/" target="_blank">
+                    <i class="ion-social-instagram-outline"></i>
+                    <p>Instagram</p>
+                </a>
+              </div>
+              <div class="link-block">
+                <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
+                    <i class="ion-social-codepen-outline"></i>
+                    <p>CodePen</p>
+                </a>
+              </div>
+              <div class="link-block">
+                <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
+                    <i class="ion-android-person"></i>
+                    <p>Blog</p>
+                </a>
+              </div>
             </div>
         </section>
         <section id="project-body">
