optimized front page for mobile

--- a/index.html
+++ b/index.html
@@ -3,95 +3,95 @@
 <html>
     <head>
       <title>Justin Lattimore</title>
-      <meta name="viewport" content="width=device-width, intital-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Rationale" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
     <body>
-      <!--
-        <aside class="image-stuff">
-            <img src="assets/justin-alt.jpg">
-        </aside>
-      -->
-        <section id="about-body">
-            <span class="ion-navicon-round"></span>
-            <div class="job-title">
-                <img src="assets/justin-close-alt.jpg">
-                <h1>Web Developer</h1>
-                <h2>Justin Lattimore</h2>
-            </div>
-            <div class="job-summary">
-                <p>
-                    Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript. I've also been trained with Ruby on Rails.
-                </p>
-                <p>
-                    Please feel free to look through my website.
-                </p>
-            </div>
-            <div class="link-logos">
-              <!--
-              <a href="https://wyzardsleeves.github.io/" target="_blank">
-                  <i class="ion-earth"></i>
-                  <p>Other Site</p>
+      <!--- beginning of top --------->
+      <div class="test-hide">
+        <section id="very-top">
+          <a href="index.html"><i class="ion-home"></i></a>
+          <a href="graphics.html"><p>Graphics</p></a>
+          <a href="hireme.html"><p style="color: red;">Hire Me</p></a>
+        </section>
+      </div>
+      <!--- bottom ----->
+      <section id="about-body">
+          <span class="ion-navicon-round"></span>
+          <div class="job-title">
+              <img src="assets/justin-close-alt.jpg">
+              <h2>Web Developer</h2>
+              <h3>Justin Lattimore</h3>
+          </div>
+          <div class="job-summary">
+              <p>
+                  Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript. I've also been trained with Ruby on Rails.
+              </p>
+              <p>
+                  Please feel free to look through my website.
+              </p>
+          </div>
+          <div class="link-logos">
+            <div class="link-block">
+              <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
+                  <i class="ion-social-linkedin-outline"></i>
+                  <p>LinkedIn</p>
               </a>
-              -->
-              <div class="link-block">
-                <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
-                    <i class="ion-social-linkedin-outline"></i>
-                    <p>LinkedIn</p>
-                </a>
-              </div>
-              <div class="link-block">
-                <a href="https://github.com/Wyzardsleeves" target="_blank">
-                    <i class="ion-social-github"></i>
-                    <p>Github</p>
-                </a>
-              </div>
-              <div class="link-block">
-                <a href="https://www.instagram.com/justinlattimore/" target="_blank">
-                    <i class="ion-social-instagram-outline"></i>
-                    <p>Instagram</p>
-                </a>
-              </div>
-              <div class="link-block">
-                <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
-                    <i class="ion-social-codepen-outline"></i>
-                    <p>CodePen</p>
-                </a>
-              </div>
-              <div class="link-block">
-                <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
-                    <i class="ion-android-person"></i>
-                    <p>Blog</p>
-                </a>
-              </div>
             </div>
-        </section>
-        <section id="project-body">
-          <div class="project-summary">
-            <div class="project-title">
-              <h2>Projects</h2>
+            <div class="link-block">
+              <a href="https://github.com/Wyzardsleeves" target="_blank">
+                  <i class="ion-social-github"></i>
+                  <p>Github</p>
+              </a>
             </div>
-            <div class="project-description">
-              <p>
-                My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
-              </p>
-              <p>
-                I look forward to learning new technologies!
-              </p>
+            <div class="link-block">
+              <a href="https://www.instagram.com/justinlattimore/" target="_blank">
+                  <i class="ion-social-instagram-outline"></i>
+                  <p>Instagram</p>
+              </a>
+            </div>
+            <div class="link-block">
+              <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
+                  <i class="ion-social-codepen-outline"></i>
+                  <p>CodePen</p>
+              </a>
+            </div>
+            <div class="link-block">
+              <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
+                  <i class="ion-android-person"></i>
+                  <p>Blog</p>
+              </a>
             </div>
           </div>
-          <div class="project-list">
-            <!-- Javascript handled in 'main.js' -->
+      </section>
+      <section id="project-body">
+        <div class="project-summary">
+          <div class="project-title">
+            <h2>Projects</h2>
           </div>
-        </section>
+          <div class="project-description">
+            <p>
+              My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+            </p>
+            <p>
+              I look forward to learning new technologies!
+            </p>
+          </div>
+        </div>
+        <div class="project-list">
+          <!-- Javascript handled in 'main.js' -->
+        </div>
+      </section>
+      <section class="right-side">
         <section id="more-info">
             <!-- Javascript handled in 'main.js' -->
         </section>
-        <script src="scripts/project_fixtures.js"></script>
-        <script src="scripts/main.js"></script>
-        <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+      </section>
+      <script src="scripts/project_fixtures.js"></script>
+      <script src="scripts/main.js"></script>
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     </body>
 </html>
