optimized graphics page

--- a/graphics.html
+++ b/graphics.html
@@ -11,6 +11,14 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
   </head>
   <body>
+    <!--- beginning of top --------->
+    <div class="test-hide">
+      <section id="very-top">
+        <a href="index.html"><i class="ion-home"></i></a>
+        <a href="graphics.html"><p>Graphics</p></a>
+        <a href="hireme.html"><p style="color: red;">Hire Me</p></a>
+      </section>
+    </div>
     <section id="about-body">
         <span class="ion-navicon-round"></span>
         <div class="portrait-info">
