added youtube channel

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
               </p>
           </div>
           <div class="link-logos">
+            <!-- http://jlattimoreweb.blogspot.com/ -->
+            <div class="link-block">
+              <a href="https://www.youtube.com/channel/UCLn0jCRt_zJfsMhR1WFswzw" target="_blank">
+                  <i class="ion-social-youtube"></i>
+                  <p>Youtube</p>
+              </a>
+            </div>
             <div class="link-block">
               <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
                   <i class="ion-social-linkedin-outline"></i>
@@ -57,12 +64,6 @@
               <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
                   <i class="ion-social-codepen-outline"></i>
                   <p>CodePen</p>
-              </a>
-            </div>
-            <div class="link-block">
-              <a href="http://jlattimoreweb.blogspot.com/" target="_blank">
-                  <i class="ion-android-person"></i>
-                  <p>Blog</p>
               </a>
             </div>
           </div>
