added Steemit blog to my site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
               </p>
           </div>
           <div class="link-logos">
-            <!-- http://jlattimoreweb.blogspot.com/ -->
+            <!--
+
+                ion-android-people
+            -->
             <div class="link-block">
               <a href="https://www.youtube.com/channel/UCLn0jCRt_zJfsMhR1WFswzw" target="_blank">
                   <i class="ion-social-youtube"></i>
@@ -64,6 +67,12 @@
               <a href="http://codepen.io/Wyzardsleeves/" target="_blank">
                   <i class="ion-social-codepen-outline"></i>
                   <p>CodePen</p>
+              </a>
+            </div>
+            <div class="link-block">
+              <a href="https://steemit.com/@justinthedev" target="_blank">
+                  <i class="ion-android-people"></i>
+                  <p>Steemit Blog</p>
               </a>
             </div>
           </div>
