added crypto central

--- a/hireme.html
+++ b/hireme.html
@@ -40,6 +40,9 @@
           </div>
           <div>
             <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+            <!--
+            <iframe src="https://resume.creddle.io/embed/a1lidyjttgc" width="850" height="1100" seamless></iframe>
+            -->
           </div>
       </div>
     </section>
