--- a/hireme.html
+++ b/hireme.html
@@ -39,9 +39,9 @@
             </p>
           </div>
           <div>
-            <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
+            <object class="resume" width="400" height="400" data="assets/Resume.pdf"></object>
             <!--
-            <iframe src="https://resume.creddle.io/embed/a1lidyjttgc" width="850" height="1100" seamless></iframe>
+              <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
             -->
           </div>
       </div>
