--- a/hireme.html
+++ b/hireme.html
@@ -39,8 +39,8 @@
             </p>
           </div>
           <div>
-            <object class="resume" width="400" height="400" data="assets/Resume.pdf"></object>
-            <!--
+            <object class="resume" data="assets/Resume.pdf"></object>
+            <!--  Old resume
               <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
             -->
           </div>
