--- a/hireme.html
+++ b/hireme.html
@@ -38,8 +38,8 @@
               I work primarily with Angular.js on the front-end and Rails on the back-end but picking up new languages or frameworks isn't a problem. I'm available for hire on a freelance or contract basis. Why not send me an email to <a href="mailto:jlattimoreweb@gmail.com">jlattimoreweb@gmail.com</a> to discuss it further?
             </p>
           </div>
-          <div>
-            <object class="resume" data="assets/Resume.pdf"></object>
+          <div class="resume-contain">
+            <iframe class="resume" src="https://resume.creddle.io/embed/a1lidyjttgc" width="854" height="1104" seamless></iframe>
             <!--  Old resume
               <iframe class="resume" src="https://docs.google.com/document/d/1GwFuGeTNZOcKBvCcVyug0uJHmpFUMmfStbe8RDZ9Vyo/pub?embedded=true"></iframe>
             -->
