made some changes to summary

--- a/index.html
+++ b/index.html
@@ -28,21 +28,13 @@
           </div>
           <div class="job-summary">
               <p>
-                  Hey, I'm an up and coming Web Developer from North Carolina with a 3D and Graphic Design background. I'm mostly familiar with HTML, CSS and Javascript. I've also been trained with Ruby on Rails.
+                  Hey, I'm an up and coming Web Developer with a 3D and Graphic Design background and am willing to relocate anywhere with my own resources. I'm well versed in HTML, CSS, ReactJS, Rails and Node.
               </p>
               <p>
                   Please feel free to look through my website.
               </p>
           </div>
           <div class="link-logos">
-            <!--
-            <div class="link-block">
-              <a href="https://www.youtube.com/channel/UCLn0jCRt_zJfsMhR1WFswzw" target="_blank">
-                  <i class="ion-social-youtube"></i>
-                  <p>Youtube</p>
-              </a>
-            </div>
-          -->
             <div class="link-block">
               <a href="https://www.linkedin.com/in/justin-lattimore-90387445" target="_blank">
                   <i class="ion-social-linkedin-outline"></i>
