--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="job-summary">
               <p>
-                  Hey, I'm an up and coming Web Developer with a 3D and Graphic Design background and am willing to relocate anywhere with my own resources. I'm well versed in HTML, CSS, ReactJS, Rails and Node.
+                  Hi, I'm a Web Developer with a 3D and Graphic Design background. I am willing to relocate anywhere with my own resources. I'm well versed in HTML, CSS, ReactJS, Rails and Node.
               </p>
               <p>
                   Please feel free to look through my website.
