added mailchimp shoe project

--- a/index.html
+++ b/index.html
@@ -68,21 +68,23 @@
           </div>
       </section>
       <section id="project-body">
-        <div class="project-summary">
-          <div class="project-title">
-            <h2>Projects</h2>
+          <div class="project-summary">
+            <div class="project-contain">
+            <div class="project-title">
+              <h2>Projects</h2>
+            </div>
+            <div class="project-description">
+              <p>
+                My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
+              </p>
+              <p>
+                I look forward to learning new technologies!
+              </p>
+            </div>
           </div>
-          <div class="project-description">
-            <p>
-              My most prominent projects pushed to Heroku. Feel free to tinker with my projects although I've specialized for the Front End I have a couple of Ruby on Rails apps.
-            </p>
-            <p>
-              I look forward to learning new technologies!
-            </p>
+          <div class="project-list">
+            <!-- Javascript handled in 'main.js' -->
           </div>
-        </div>
-        <div class="project-list">
-          <!-- Javascript handled in 'main.js' -->
         </div>
       </section>
       <section class="right-side">
