--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
               </a>
             </div>
             <div class="link-block">
+              <a href="https://twitter.com/JustintheDev1" target="_blank">
+                  <i class="ion-social-twitter"></i>
+                  <p>Twitter</p>
+              </a>
+            </div>
+            <div class="link-block">
               <a href="https://www.instagram.com/justinlattimore/" target="_blank">
                   <i class="ion-social-instagram-outline"></i>
                   <p>Instagram</p>
